--- a/Styling.css
+++ b/Styling.css
@@ -23,6 +23,9 @@ body{
     font-size: larger;
     background-color:white;
 }
+h1{
+    display: flex;
+}
 #stopwatch{
     background-color: white;
     height: 40%;
@@ -34,7 +37,7 @@ body{
     display: flex;
     flex-direction: row;
     height: 50%;
-    width: 100%;
+    width: 100%;    
     /* border: 1px solid black; */
 }
 #display{
@@ -46,7 +49,7 @@ body{
     letter-spacing: 1px;
 }
 #userButtons{
-    display:flex;
+    display:flex;    
     align-items: center;
     justify-content: space-around;
 }
@@ -57,7 +60,7 @@ body{
     font-weight: 700;
     letter-spacing: 2px;
     border-radius: 1rem;
-    color:white;
+    color:white;    
 }
 #start:hover{
     /* background-color: white; */
@@ -71,3 +74,28 @@ body{
     /* background-color: white; */
     color: black;
 }
+@media screen and (max-width:1200px){
+    #heading{
+        width: 45%;
+    }
+    #stopwatch{
+        width:45%
+    }
+}
+@media screen and (max-width:900px){
+    #heading{
+        width: 60%;
+    }
+    #stopwatch{
+        width:60%
+    }
+}
+@media screen and (max-width:600px){
+    #heading{
+        width: 95%;
+    }
+    #stopwatch{
+        width:95%
+    }
+}
+
