--- a/Styling.css
+++ b/Styling.css
@@ -77,6 +77,7 @@ h1{
 @media screen and (max-width:1200px){
     #heading{
         width: 45%;
+        margin-top: 8%;
     }
     #stopwatch{
         width:45%
@@ -85,6 +86,7 @@ h1{
 @media screen and (max-width:900px){
     #heading{
         width: 60%;
+        margin-top: 13%;
     }
     #stopwatch{
         width:60%
@@ -93,6 +95,7 @@ h1{
 @media screen and (max-width:600px){
     #heading{
         width: 95%;
+        margin-top: 19%;
     }
     #stopwatch{
         width:95%
